# yade-study

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: devcontainer.json
scripts/: build_yade.sh
yade/: __init__.py  __init__.pyi  pyproject.toml  setup.py
yadeimport/: __init__.py  __init__.pyi  pyproject.toml
